--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Random Facts Generator</h1>
   <br />
-  <button>Generate Facts : About Cats</button>
+  <button>Generate Facts <br> About Cats</button>
   <br />
   <h2></h2>
 
