--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Random Facts Generator</h1>
+  <h1>Random Fact Generator</h1>
   <br />
   <button>Generate Facts <br> About Cats</button>
   <br />
